CKA-Exam-Practice-Tests/policypod.yaml
apiVersion: v1
kind: Pod
metadata:
   name: network-policy-pod
   labels:
      access: "granted"
spec:
   containers:
   - name: access-pod
     image: nginx
     ports:
     - containerPort: 80
