CKA-Exam-Practice-Tests/resource-quota-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: resource-quota-pod
  namespace: dev
spec:
  containers:
  - name: quota-mem-cpu-demo-ctr
    image: nginx
    resources:
      limits:
        memory: "800Mi"
        cpu: "800m"
      requests:
        memory: "600Mi"
        cpu: "400m"
