CKA-Exam-Practice-Tests/rollingUpdateDeploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: myapp
spec:
  replicas: 2
  strategy: 
   type: RollingUpdate
   rollingUpdate:
     maxSurge: 1
     maxUnavailable: 25%
     
  selector:
     matchLabels:
        app: dev
  template:
     metadata:
        labels:
           app: dev
     spec:
       containers: 
       - image: nginx:latest
         name: myapp
         ports:
           - containerPort: 8080
         livenessProbe:
          httpGet:
             path: /
             port: 8080
          initialDelaySeconds: 30
