CKA-Exam-Practice-Tests/hpa-group.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
   name: hpa-pod   
spec:
   replicas: 2
   selector:
      matchLabels:
         app: hpa
   template:
      metadata:
         labels:
            app: hpa
      spec:
         containers:
         - name: hpa
           image: registry.k8s.io/hpa-example
           ports:
           - containerPort: 80
           resources:
               limits:
                  cpu: 500m
               requests:
                  cpu: 200m
---

apiVersion: v1
kind: Service
metadata: 
   name: hpa-svc
   labels:
      app: hpa
spec:
  selector:
     app: hpa
  ports:
  - port: 80
