CKA-Exam-Practice-Tests/netwrk-policy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: access-nginx
spec:
  podSelector:
    matchLabels:
      access: "true"
  ingress:
    - from:
      - podSelector:
          matchLabels:
            access: "true"
